--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "node scripts/dev.js reactivity -f esm"
+    "dev": "node scripts/dev.js reactivity -f esm",
+    "dev-runtime": "node scripts/dev.js runtime-dom -f esm"
   },
   "author": "",
   "license": "ISC",
